--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Loading_dialog">You will be given a few questions to allow us to predict your stress levels and what your mood level is at.</string>
+    <string name="Screen_Time">Checking Screen Usage</string>
 </resources>
