--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Loading_dialog">You will be given a few questions to allow us to predict your stress levels and what your mood level is at.</string>
     <string name="Screen_Time">Checking Screen Usage</string>
+    <string name="title_activity_meditation_player2">MeditationPlayerActivity2</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
