--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="appAuthRedirectScheme">my-stressfree-app</string>
+    <string name="youtube_api_key">AIzaSyDMFZK6EnTNAq7EmY67mCNIv3suBYX-124</string>
 </resources>
