--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Stress-Free-App</string>
-    <string name="GetStartedDialog">Welcome to a placeholder. Shall we get started?</string>
+    <string name="app_name">CalmCompass</string>
+    <string name="GetStartedDialog">Welcome to a CalmCompass \nStress Survey.\n\nWe will be assessing your phone\n data and asking you a few questions.\n\nThis will help us gauge stress level.\n For more info on why we are using these data and question click the button below </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Loading_dialog">You will be given a few questions to allow us to predict your stress levels and what your mood level is at.</string>
